# my_rpi_pico_app

./: CMakeLists.txt  README.md
src/: lcd.c  lcd.h  main.c
